# amgalan

./: .cproject  .project  Makefile
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/include/: amgalan_config.h.in
src/lib/: CMakeLists.txt  amgalan.cpp  amgalan.h
